tests/rosetta/out/Fortran/anonymous-recursion-2.error
gfortran error: exit status 1
/workspace/mochi/tests/rosetta/out/Fortran/anonymous-recursion-2.f90:13:3:

   13 |   main()
      |   1
Error: Unclassifiable statement at (1)
